.github/workflows/no syntax errors
File "gold_bot.py", line X
  some code here
              ^
SyntaxError: invalid syntax
